--- a/ReactJS_study/react-spring/admin/src/main/resources/application.properties
+++ b/ReactJS_study/react-spring/admin/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/employee_management_system?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/employee_management_system?useSSL=false&serverTimezone=UTC
+
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MYSQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.hibernate.ddl-auto=update
