--- a/SpringBoot/workspace/3부-스프링 부트 원리/08.내장 웹 서버 응용 2부_HTTPS와 HTTP2/springbootgetiingstarter/pom.xml
+++ b/SpringBoot/workspace/3부-스프링 부트 원리/08.내장 웹 서버 응용 2부_HTTPS와 HTTP2/springbootgetiingstarter/pom.xml
@@ -20,11 +20,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>e
         </dependency>
         <dependency>
             <groupId>me.whiteship</groupId>
             <artifactId>sangmoon-spring-boot-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
     </dependencies>
 
