--- a/SpringBoot/workspace/3부-스프링 부트 원리/08.내장 웹 서버 응용 2부_HTTPS와 HTTP2/springbootgetiingstarter/src/main/resources/application.properties
+++ b/SpringBoot/workspace/3부-스프링 부트 원리/08.내장 웹 서버 응용 2부_HTTPS와 HTTP2/springbootgetiingstarter/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-server.ssl.key-store: keystore.p12
-server.ssl.key-store-password: 123456
-server.ssl.keyStoreType: PKCS12
-server.ssl.keyAlias: tomcat
+server.ssl.key-store= keystore.p12
+server.ssl.key-store-password= 123456
+server.ssl.key-store-type= PKCS12
+server.ssl.key-alias= tomcat
+server.port=8443
+server.http2.enabled=true
