--- a/스프링 부트와 AWS로 혼자 구현하는 웹서비스/src/main/resources/application-oauth.properties
+++ b/스프링 부트와 AWS로 혼자 구현하는 웹서비스/src/main/resources/application-oauth.properties
@@ -1,6 +1,18 @@
 spring.security.oauth2.client.registration.google.client-id=508502379165-g93f99oqpeplt2juo2fe1nvh3u3ujm53.apps.googleusercontent.com
-
 spring.security.oauth2.client.registration.google.client-secret=4kfi9KYEKd6zmzHe0Bpvc6zR
-
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+# registration
+spring.security.oauth2.client.registration.naver.client-id=xty6rIOyr4SWH66Hwr3S
+spring.security.oauth2.client.registration.naver.client-secret=r4RquwF0m1
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+# provider
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
