--- a/인프런 강의 정리/10.더 자바, 애플리케이션을 테스트하는 다양한 방법/02.jUnit/pom.xml
+++ b/인프런 강의 정리/10.더 자바, 애플리케이션을 테스트하는 다양한 방법/02.jUnit/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.4.2</version>
+        </dependency>
     </dependencies>
 
     <build>
