--- a/인프런 강의 정리/11.실전!스프링 부트와 JPA 활용1 - 웹 어플리케이션 개발 - 김영한/01.프로젝트생성/05. JPA와 DB 설정, 동작확인/src/main/resources/application-local.yml
+++ b/인프런 강의 정리/11.실전!스프링 부트와 JPA 활용1 - 웹 어플리케이션 개발 - 김영한/01.프로젝트생성/05. JPA와 DB 설정, 동작확인/src/main/resources/application-local.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
-      ddl-auto: none #자동 테이블 생성
+      ddl-auto: create #자동 테이블 생성
     properties:
       hibernate:
         #        show_sql: true #system.out에서 찍는 로그
