성능최적화 V1-V6

--- a/인프런 강의 정리/11.실전!스프링 부트와 JPA 활용1 - 웹 어플리케이션 개발 - 김영한/01.프로젝트생성/05. JPA와 DB 설정, 동작확인/src/main/resources/application-local.yml
+++ b/인프런 강의 정리/11.실전!스프링 부트와 JPA 활용1 - 웹 어플리케이션 개발 - 김영한/01.프로젝트생성/05. JPA와 DB 설정, 동작확인/src/main/resources/application-local.yml
@@ -6,9 +6,11 @@ spring:
     password:
     driver-class-name: org.h2.Driver
   jpa:
+    open-in-view: false
     hibernate:
       ddl-auto: create #자동 테이블 생성
     properties:
       hibernate:
-        #        show_sql: true #system.out에서 찍는 로그
+        #show_sql: true #system.out에서 찍는 로그
         format_sql: true
+        default_batch_fetch_size: 100
