--- a/인프런 강의 정리/07.실전!스프링데이터JPA/01.프로젝트 환경설정/src/main/resources/application.yml
+++ b/인프런 강의 정리/07.실전!스프링데이터JPA/01.프로젝트 환경설정/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/datajpa
+    url: jdbc:h2:~/datajpa
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -11,10 +11,16 @@ spring:
     properties:
      hibernate:
       # show_sql: true
-      # sql 포맷팅
+      # sql 포맷팅 , 여러줄로 보기 편하게 해준다.
       format_sql: true
-
+  data:
+    web:
+      pageable:
+        default-page-size: 10
+        max-page-size: 2000
+        one-indexed-parameters: true
 logging.level:
   #파일로 로그
    org.hibernate.SQL: debug
-   org.hibernate.type: trace
+   #파라미터까지 확인 가능
+#   org.hibernate.type: trace
