--- a/flutter/instagram-clon/pubspec.yaml
+++ b/flutter/instagram-clon/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,7 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  image_picker: ^0.8.5+3
+  flutter_signin_button: ^2.0.0
+  firebase_core: ^1.20.1
+  google_sign_in: ^5.4.1
+  firebase_auth: ^3.6.3
+#  cloud_firestore: ^1.0.4
+#  firebase_storage: ^8.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
