querdsl 테스트 코드 추가

--- a/인프런 강의 정리/13.querydsl/src/main/resources/application.yml
+++ b/인프런 강의 정리/13.querydsl/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       hibernate: #system.out 으로 출력
         show_sql: true
         format_sql: true
-
+        use_sql_comment: true
 # logger 로 출력
 logging.level:
   org.hibernate.SQL: debug
